# Fnlloyd_GIT

./: .gitignore  AUDIT_animation_room.md  AUDIT_hud.md  AUDIT_menus.md  AUDIT_particle_editor.md  AUDIT_recorder.md  AUDIT_sprite_exporter.md  AUDIT_studio.md  AUDIT_vite_config.md  CHECKLIST.md  Design_Document.md  FNLLLOYD_PERSONALITY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  ROADMAP.md  ROADMAP_PHASE_2_STUDIO_LAYOUT.md  ROADMAP_PHASE_3_GOLD_THEME.md  ROADMAP_PHASE_4_PARTICLE_FONT.md  ROADMAP_PHASE_5_RECORD_EXPORT.md  ROADMAP_PHASE_6_DEFAULTS_PETS.md  ROADMAP_PHASE_7_SETTINGS_PERSIST.md  SPRITE_SYSTEM_INTEGRATION.md  fnlloyd_enhanced.html  founder_index.html.archive  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Dynamic Bricks/: DynamicBoxes.html
Reference Files/: CHARACTER_DEV.md  VLLM_INTEGRATION.md
Reference Files/assets/: 0d9f7cf7-5a10-4e5d-bf5e-6999522ea4e9.gltf  39045002-634e-45db-800f-ae00dace4ad4.gltf  bc0dc1bc-b671-47ae-a423-4994405e7587.gltf  efef9efe-2859-406c-a9b8-cac42f1031fa.gltf  f1e85192-4b87-425d-8908-a39c898ebb25.gltf
Reference Files/lib/: fnlloyd-api.js  fnlloyd-chat.js  settings-manager.js  shared-memory-manager.js
Reference Files/msc .js/: TYPE_SAFETY_REPORT.md  audio-placeholder.js  audio-system.js  ball-abilities-enhanced.js  banker-bomb.js  collision-system.js  constants.js  entity-systems.js  error-tracker.js  flamethrower.js  fnlloyd-entity.js  fnlloyd-particle-body.js  (+11 more)
public/: index.html
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+54 files in other folders)
