[package]
name = "fnlloyd"
version = "0.1.0"
description = "!Fnlloyd - Defend The Earth"
authors = ["Fnlloyd Team"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
